Update fonts, page title, and add initial CSS styles
Switched to new Google Fonts and updated the page title in index.html. Added an 'About This Website' section and revised footer credits. Introduced a new style.css file with CSS variables for colors, fonts, and spacing, and applied base styles for body and h1.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	</style>
 	<!-- ==============FONTS ============== -->
 	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Gasoek+One&family=Nokora:wght@100..900&family=Quicksand:wght@300..700&display=swap');
-	</style>
-	<title>Index</title>
+		@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Monsieur+La+Doulaise&display=swap');
+		</style>
+	<title>Links</title>
 </head>
 
 <body>
@@ -21,10 +21,16 @@
         <h1>Glassware</h1>
         <p>This collection brings together an exploration of glassware, spanning historical context, techniques, and visual inspiration. It layers imagery, videos, and links to highlight the versatility, beauty, and technical ingenuity of glass.</p>
     </hgroup>
+	
+	<section>
+		About This Website
+		Glass & Glassware 
+	</section>
 </body>
 
 <footer>
-    <p>Collected By Zarah Yaqub and Katie Lu</p>
+    <p>Curated by Katie Lu</p>
+	<p>Coded and Designed by Zarah Yaqub</p>
 </footer>
 
 </html>
