Update fonts, layout, and structure for glassware site
Replaces DM Sans and Monsieur La Doulaise with Syne and Astloch fonts, updates font sizing and variables, and refines the visual hierarchy. Moves the about text into a dedicated section, adds a styled list structure for future content, and improves footer layout and attribution. Enhances CSS for better spacing, text alignment, and responsive design.

--- a/index.html
+++ b/index.html
@@ -11,26 +11,47 @@
 	</style>
 	<!-- ==============FONTS ============== -->
 	<style>
-		@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Monsieur+La+Doulaise&display=swap');
-		</style>
+		@import url('https://fonts.googleapis.com/css2?family=Astloch:wght@400;700&family=Syne:wght@400..800&display=swap');
+	</style>
+
 	<title>Links</title>
 </head>
 
 <body>
     <hgroup>
         <h1>Glassware</h1>
-        <p>This collection brings together an exploration of glassware, spanning historical context, techniques, and visual inspiration. It layers imagery, videos, and links to highlight the versatility, beauty, and technical ingenuity of glass.</p>
     </hgroup>
 	
+	<section class="about">
+		<h2>About</h2>
+		<p>This collection brings together an exploration of glassware, spanning historical context, techniques, and visual inspiration. It layers imagery, videos, and links to highlight the versatility, beauty, and technical ingenuity of glass.</p>
+	</section>
+
+	<!--================== Blocks ================== -->
 	<section>
-		About This Website
-		Glass & Glassware 
+		<ul>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
 	</section>
 </body>
 
 <footer>
-    <p>Curated by Katie Lu</p>
-	<p>Coded and Designed by Zarah Yaqub</p>
+    <p>Curated by Katie Lu & Zarah Yaqub</p>
+	<p>Coded & Designed by Zarah Yaqub</p>
 </footer>
 
 </html>
