Add glassware assets and update layout/styles
Added multiple image, video, and text assets to the Blocks directory. Updated index.html to display new assets in the list and included the Asar font. Improved style.css for better card layout, responsive design, and updated font usage for headings.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 	</style>
 	<!-- ==============FONTS ============== -->
 	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Astloch:wght@400;700&family=Syne:wght@400..800&display=swap');
-	</style>
+		@import url('https://fonts.googleapis.com/css2?family=Asar&family=Astloch:wght@400;700&family=Syne:wght@400..800&display=swap');
+		</style>
+		
 
 	<title>Links</title>
 </head>
@@ -30,11 +31,12 @@
 	<!--================== Blocks ================== -->
 	<section>
 		<ul>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
+			<li><img src="Blocks/24_glassware-photography-by-coppi-barbieri.png" alt="Italian Trulli"></li>
+			<li><img src="Blocks/45_ornate-champagne-glass.jpg" alt="Italian Trulli"></li>
+			<li><img src="Blocks/44_glass-bong.png" alt=""></li>
+			<li><img src="Blocks/43_e512fff22894a5cd8964c43768c5428d-jpg.jpg" alt=""></li>
+			<li><img src="Blocks/42_mishima-jpg.jpg" alt=""></li>
+			<li><video src="Blocks/40_untitled.mp4"></video></li>
 			<li></li>
 			<li></li>
 			<li></li>
