Improve video embed and Still figuring out vid styles in css
Updated the video element in index.html to use autoplay, muted, loop, and playsinline attributes for better playback. Still figuring out vid styles in css

--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
 			<li><img src="Blocks/44_glass-bong.png" alt=""></li>
 			<li><img src="Blocks/43_e512fff22894a5cd8964c43768c5428d-jpg.jpg" alt=""></li>
 			<li><img src="Blocks/42_mishima-jpg.jpg" alt=""></li>
-			<li><video src="Blocks/40_untitled.mp4"></video></li>
+			<li> <video autoplay muted loop playsinline>
+				<source src="Blocks/40_untitled.mp4" type="video/mp4">
+			  </video></li>
+			  <!-- Googled "auto play video html css" -->
+			   <!-- it showed me a W3 link: https://www.w3schools.com/html/html5_video.asp -->
+				<!-- it showed me there are "control" attributes that you can add to influence width, height as well as muted and autoplay -->
 			<li></li>
 			<li></li>
 			<li></li>
