Fix typo and tidy CSS; adjust responsive layout
Corrects a typo in index.html ("Cureate" → "Curated") and performs CSS cleanup and formatting (consistent spacing, indentation, and property formatting). Adjusts layout/spacing: increases top margin for content blocks, increases footer bottom margin, refactors .blocks/ul/li rules, and refines responsive rules (tablet/desktop flex-basis, larger body/footer/h1/.about h2 sizes and navigation padding). Adds a developer comment about a responsiveness issue for future investigation.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				visual inspiration. It layers imagery, videos, and links to highlight the versatility, beauty, and
 				technical ingenuity of glass.</p>
 
-				Cureate and created in colaboration with Katie Lu on <a href="https://www.are.na/katie-lu/glassware-rxfrlfenjcu">Are.na</a>
+				Curated and created in colaboration with Katie Lu on <a href="https://www.are.na/katie-lu/glassware-rxfrlfenjcu">Are.na</a>
 		</section>
 	</main>
 
