--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
 			<ul>
 
 				<li class="img-block"><data value="img">
-					<img src="Blocks/24_glassware-photography-by-coppi-barbieri.png"
-							alt="Italian Trulli">
+					<div class="container-test">
+						<img src="Blocks/24_glassware-photography-by-coppi-barbieri.png"
+								alt="Italian Trulli">
+					</div>
 				</data></li>
 				<li class="img-block"><img src="Blocks/45_ornate-champagne-glass.jpg" alt="Italian Trulli"></li>
 				<li class="img-block"><img src="Blocks/44_glass-bong.png" alt=""></li>
@@ -80,13 +82,27 @@
 			</ul>
 		</section>
 
+		<section>
+			<!-- <dialog class="modal" open="" style="pointer-events: auto;">
+				<button class="exit">×</button>
+				<div class="modal-contents" style="pointer-events: auto;">
+					<h2>The Fragrant Past</h2>
+					<h3>Parfum</h3>
+					<h4>Added By huijie ji</h4>
+					<div class="divider-line"></div>
+					<iframe class="embedly-embed" src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FdNNCLY1RLbw%3Fwmode%3Dtransparent%26feature%3Doembed&amp;wmode=transparent&amp;display_name=YouTube&amp;url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DdNNCLY1RLbw&amp;image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FdNNCLY1RLbw%2Fhqdefault.jpg&amp;type=text%2Fhtml&amp;schema=youtube" width="640" height="360" scrolling="no" title="YouTube embed" frameborder="0" allow="autoplay; fullscreen; encrypted-media; picture-in-picture;" allowfullscreen="true"></iframe>
+					<p></p><p>Perfume's history goes back thousands of years. The first recorded use goes back to ancient Egypt around 3000 BC. Egyptians made fragrant oils and balms for religious purposes. </p>
+				</div>
+			</dialog> -->
+		</section>
+
 		<section class="about">
-			<h2>About this collection</h2>
+			<h2>About&nbsp;this&nbsp;collection</h2>
 			<p>This collection brings together an exploration of glassware, spanning historical context, techniques, and
 				visual inspiration. It layers imagery, videos, and links to highlight the versatility, beauty, and
 				technical ingenuity of glass.</p>
 
-				Curated and created in colaboration with Katie Lu on <a href="https://www.are.na/katie-lu/glassware-rxfrlfenjcu" " target="_blank">Are.na</a>
+				<p class="curate-tag">Curated and created in colaboration with Katie Lu on <a href="https://www.are.na/katie-lu/glassware-rxfrlfenjcu" " target="_blank">Are.na 🡭</a></p>
 		</section>
 	</main>
 
