Add glass overlay and restructure image blocks
Refactor image list items to include a .container-test overlay inside each .img-block (remove the <data> wrapper) and standardize markup. Add CSS for .img-block and .container-test to create a glass-like overlay (backdrop-filter, semi-transparent background, border, shadow) that fades out on hover. The video block's overlay is commented out-idk it doesn't work. Also, minor alt attribute adjustments.

--- a/index.html
+++ b/index.html
@@ -51,17 +51,18 @@
 		<section class="blocks">
 			<ul>
 
-				<li class="img-block"><data value="img">
-					<div class="container-test">
-						<img src="Blocks/24_glassware-photography-by-coppi-barbieri.png"
-								alt="Italian Trulli">
-					</div>
-				</data></li>
-				<li class="img-block"><img src="Blocks/45_ornate-champagne-glass.jpg" alt="Italian Trulli"></li>
-				<li class="img-block"><img src="Blocks/44_glass-bong.png" alt=""></li>
-				<li class="img-block"><img src="Blocks/43_e512fff22894a5cd8964c43768c5428d-jpg.jpg" alt=""></li>
-				<li class="img-block"><img src="Blocks/42_mishima-jpg.jpg" alt=""></li>
+				<li class="img-block">
+					<div class="container-test"></div>
+						<img src="Blocks/24_glassware-photography-by-coppi-barbieri.png" alt=""></li>
+
+				<li class="img-block">
+					<div class="container-test"></div>
+					<img src="Blocks/45_ornate-champagne-glass.jpg" alt=""></li>
+				<li class="img-block"><div class="container-test"></div><img src="Blocks/44_glass-bong.png" alt=""></li>
+				<li class="img-block"><div class="container-test"></div><img src="Blocks/43_e512fff22894a5cd8964c43768c5428d-jpg.jpg" alt=""></li>
+				<li class="img-block"><div class="container-test"></div><img src="Blocks/42_mishima-jpg.jpg" alt=""></li>
 				<li class="video-block"> 
+					<!-- <div class="container-test"></div> -->
 					<video autoplay muted loop playsinline>
 					<source src="Blocks/40_untitled.mp4" type="video/mp4">
 					</video>
