--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style.css">
 	<script defer src="script.js"></script>
+	<script defer src="arena.js"></script>
 	<!-- ==============FONTS ============== -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,9 +16,13 @@
 
 	<title>Links</title>
 </head>
+
 <body>
 	<nav id="navigation">
 		<ul>
+			<li>
+				All
+			</li>
 			<li>
 				Look
 			</li>
@@ -35,7 +40,8 @@
 
 	<header>
 		<!-- <h1>Glassware</h1> -->
-		 <h1>About Glass</h1>
+		 <h1 id="channel-title">Raise your Glass</h1>
+		 <p><a id="channel-link">See on Are.na ↗</a></p>
 	</header>
 	<main>
 
@@ -47,54 +53,11 @@
 	video-block
 	pdf-block
 	link-block -->
+	
 
-		<section class="blocks">
-			<ul>
-
-				<li class="img-block">
-					<div class="container-test"></div>
-						<img src="Blocks/24_glassware-photography-by-coppi-barbieri.png" alt=""></li>
-
-				<li class="img-block">
-					<div class="container-test"></div>
-					<img src="Blocks/45_ornate-champagne-glass.jpg" alt=""></li>
-				<li class="img-block"><div class="container-test"></div><img src="Blocks/44_glass-bong.png" alt=""></li>
-				<li class="img-block"><div class="container-test"></div><img src="Blocks/43_e512fff22894a5cd8964c43768c5428d-jpg.jpg" alt=""></li>
-				<li class="img-block"><div class="container-test"></div><img src="Blocks/42_mishima-jpg.jpg" alt=""></li>
-				<li class="video-block"> 
-					<!-- <div class="container-test"></div> -->
-					<video autoplay muted loop playsinline>
-					<source src="Blocks/40_untitled.mp4" type="video/mp4">
-					</video>
-				</li>
-				<!-- Googled "auto play video html css" -->
-				<!-- it showed me a W3 link: https://www.w3schools.com/html/html5_video.asp -->
-				<!-- it showed me there are "control" attributes that you can add to influence width, height as well as muted and autoplay -->
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-			</ul>
-		</section>
-
-		<section>
-			<!-- <dialog class="modal" open="" style="pointer-events: auto;">
-				<button class="exit">×</button>
-				<div class="modal-contents" style="pointer-events: auto;">
-					<h2>The Fragrant Past</h2>
-					<h3>Parfum</h3>
-					<h4>Added By huijie ji</h4>
-					<div class="divider-line"></div>
-					<iframe class="embedly-embed" src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FdNNCLY1RLbw%3Fwmode%3Dtransparent%26feature%3Doembed&amp;wmode=transparent&amp;display_name=YouTube&amp;url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DdNNCLY1RLbw&amp;image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FdNNCLY1RLbw%2Fhqdefault.jpg&amp;type=text%2Fhtml&amp;schema=youtube" width="640" height="360" scrolling="no" title="YouTube embed" frameborder="0" allow="autoplay; fullscreen; encrypted-media; picture-in-picture;" allowfullscreen="true"></iframe>
-					<p></p><p>Perfume's history goes back thousands of years. The first recorded use goes back to ancient Egypt around 3000 BC. Egyptians made fragrant oils and balms for religious purposes. </p>
-				</div>
-			</dialog> -->
+			<h2>All blocks</h2>
+			<ul id="channel-blocks"></ul>
+			<p><span id="channel-count"></span> blocks</p>	
 		</section>
 
 		<section class="about">
@@ -103,15 +66,18 @@
 				visual inspiration. It layers imagery, videos, and links to highlight the versatility, beauty, and
 				technical ingenuity of glass.</p>
 
-				<p class="curate-tag">Curated and created in colaboration with Katie Lu on <a href="https://www.are.na/katie-lu/glassware-rxfrlfenjcu" " target="_blank">Are.na 🡭</a></p>
+				<p class="curate-tag">Curated and created in colaboration with Katie Lu on 
+					<p><a id="channel-link">See on Are.na 🡭</a></p></a></p>
 		</section>
 	</main>
 
 
-	<footer>
+	<footer id="channel-users">
 		<p>Curated by Katie&nbsp;Lu</p>
 		<p>Coded & Designed by Zarah&nbsp;Yaqub</p>
 	</footer>
 </body>
-
 </html>
+
+
+	
