Remove Are.na link and delete script.js
Comment out the Are.na channel link in index.html (also fixes malformed nested tags) to disable the external link/visual element. Remove script.js from the project—presumably unused—to clean up the codebase.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				technical ingenuity of glass.</p>
 
 				<p class="curate-tag">Curated and created in colaboration with Katie Lu on 
-					<p><a id="channel-link">See on Are.na 🡭</a></p></a></p>
+					<!-- <p><a id="channel-link">See on Are.na 🡭</a></p></a></p> -->
 		</section>
 	</main>
 
