Move CSS/JS to assets and update HTML
Reorganize static files by moving arena.js and style.css into the assets/ directory and updating index.html to reference /assets/ paths. Removed the script.js include, renamed the <section> class from "about" to "description", and added a small placeholder in arena.js for Image handling (introducing `let imageItem =`). style.css content was unchanged aside from the rename.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- META TAG https://typography-interaction-2526.github.io/topic/responsive/#viewport-meta-tag -->
 	<link rel="stylesheet" href="reset.css">
-	<link rel="stylesheet" href="style.css">
-	<script defer src="script.js"></script>
-	<script defer src="arena.js"></script>
+	<link rel="stylesheet" href="/assets/style.css">
+	<script defer src="/assets/arena.js"></script>
 	<!-- ==============FONTS ============== -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -60,7 +59,7 @@
 			<p><span id="channel-count"></span> blocks</p>	
 		</section>
 
-		<section class="about">
+		<section class="description">
 			<h2>About&nbsp;this&nbsp;collection</h2>
 			<p>This collection brings together an exploration of glassware, spanning historical context, techniques, and
 				visual inspiration. It layers imagery, videos, and links to highlight the versatility, beauty, and
