--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- META TAG https://typography-interaction-2526.github.io/topic/responsive/#viewport-meta-tag -->
 	<link rel="stylesheet" href="reset.css">
-	<link rel="stylesheet" href="/assets/style.css">
-	<script defer src="/assets/arena.js"></script>
+	<link rel="stylesheet" href="assets/style.css">
+	<script defer src="assets/arena.js"></script>
 	<!-- ==============FONTS ============== -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
