Fix stylesheet link attributes
Correct link tags in index.html to use href instead of src for reset.css and assets/style.css so stylesheets load properly. This fixes broken styling caused by the incorrect attribute.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- META TAG https://typography-interaction-2526.github.io/topic/responsive/#viewport-meta-tag -->
-	<link rel="stylesheet" src="reset.css">
-	<link rel="stylesheet" src="assets/style.css">
+	<link rel="stylesheet" href="reset.css">
+	<link rel="stylesheet" href="assets/style.css">
 	<script defer src="assets/arena.js"></script>
 	<!-- ==============FONTS ============== -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
