Add Image rendering, tweak img CSS, update UI text
Implemented rendering for Image blocks in assets/arena.js (template, console log, and insertion into channelBlocks) and removed a leftover Link caption. Modified renderUser to replace the previous avatar/name markup with a single linked name (hardcoded as "Zarah Yaqub"). Updated assets/style.css to use width/height:100%, object-fit/object-position and display:block for images (replacing block-size/inline-size and overflow:clip) so images fill their containers without distortion. In index.html cleared the static channel title (to allow dynamic population), wrapped the blocks list in a .blocks section (commented out the All blocks heading), and simplified the footer to a single curator tag.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 	<header>
 		<!-- <h1>Glassware</h1> -->
-		 <h1 id="channel-title">Raise your Glass</h1>
+		 <h1 id="channel-title"></h1>
 		 <p><a id="channel-link">See on Are.na ↗</a></p>
 	</header>
 	<main>
@@ -54,11 +54,11 @@
 	link-block -->
 	
 
-			<h2>All blocks</h2>
-			<ul id="channel-blocks"></ul>
-			<p><span id="channel-count"></span> blocks</p>	
-		</section>
-
+	<section class="blocks">
+		<!-- <h2>All blocks</h2> -->
+		<ul id="channel-blocks"></ul>
+		<p><span id="channel-count"></span> blocks</p>
+	</section>
 		<section class="description">
 			<h2>About&nbsp;this&nbsp;collection</h2>
 			<p>This collection brings together an exploration of glassware, spanning historical context, techniques, and
@@ -72,8 +72,10 @@
 
 
 	<footer id="channel-users">
-		<p>Curated by Katie&nbsp;Lu</p>
-		<p>Coded & Designed by Zarah&nbsp;Yaqub</p>
+		<p class="curate-tag">
+			Katie Lu
+			<!-- <a id="channel-link">See on Are.na 🡭</a> -->
+		</p>
 	</footer>
 </body>
 </html>
