--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 	<header>
 		<!-- <h1>Glassware</h1> -->
 		 <h1 id="channel-title"></h1>
-		 <p><a id="channel-link">See on Are.na ↗</a></p>
+		 <p><a id="channel-link">See on Are.na 🡭</a></p>
+		 <!-- <p><a id="channel-link">See on Are.na ↗</a></p> -->
 	</header>
 	<main>
 
@@ -66,7 +67,7 @@
 				technical ingenuity of glass.</p>
 
 				<p class="curate-tag">Curated and created in colaboration with Katie Lu on 
-					<p><a id="channel-link">See on Are.na 🡭</a></p></a></p>
+					<!-- <p><a id="channel-link">See on Are.na 🡭</a></p></a></p> -->
 		</section>
 	</main>
 
